tests/neg-macros/macros-in-same-project-5/Bar.scala
import scala.quoted._

object Bar {

  Foo.myMacro() // error

  def aMacroImplementation with QuoteContext : Expr[Unit] = Bar.hello()

  def hello() with QuoteContext : Expr[Unit] = '{ println("Hello") }
}
